@@ -1,6 +1,7 @@
 package de.sub.goobi.forms;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * This file is part of the Goobi Application - a Workflow tool for the support of mass digitization.
@@ -34,13 +35,13 @@ import java.util.List;
 import java.util.Set;
 import java.util.TimeZone;
 
-import javax.enterprise.context.SessionScoped;
 import javax.faces.context.ExternalContext;
 import javax.faces.context.FacesContext;
 import javax.faces.model.SelectItem;
 import javax.inject.Named;
 import javax.servlet.http.HttpServletRequest;
 
+import org.apache.deltaspike.core.api.scope.WindowScoped;
 import org.goobi.beans.Docket;
 import org.goobi.beans.Ruleset;
 import org.goobi.beans.Step;
@@ -53,6 +54,7 @@ import de.sub.goobi.config.ConfigurationHelper;
 import de.sub.goobi.helper.FacesContextHelper;
 import de.sub.goobi.helper.Helper;
 import de.sub.goobi.helper.HelperSchritte;
+import de.sub.goobi.helper.ScriptThreadWithoutHibernate;
 import de.sub.goobi.helper.exceptions.DAOException;
 import de.sub.goobi.persistence.managers.DocketManager;
 import de.sub.goobi.persistence.managers.RulesetManager;
@@ -62,7 +64,7 @@ import lombok.Setter;
 import ugh.dl.Fileformat;
 
 @Named("HelperForm")
-@SessionScoped
+@WindowScoped
 public class HelperForm implements Serializable {
 
     /**
@@ -149,12 +151,13 @@ public class HelperForm implements Serializable {
         Set<Class<? extends Fileformat>> formatSet = new Reflections("ugh.fileformats.*").getSubTypesOf(Fileformat.class);
         for (Class<? extends Fileformat> cl : formatSet) {
             try {
-                Fileformat ff = cl.newInstance();
+                Fileformat ff = cl.getDeclaredConstructor().newInstance();
                 if (ff.isExportable()) {
                     ffs.add(new SelectItem(ff.getDisplayName(), null));
                 }
             } catch (InstantiationException e) {
             } catch (IllegalAccessException e) {
+            } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             }
         }
         return ffs;
@@ -166,12 +169,13 @@ public class HelperForm implements Serializable {
         Set<Class<? extends Fileformat>> formatSet = new Reflections("ugh.fileformats.*").getSubTypesOf(Fileformat.class);
         for (Class<? extends Fileformat> cl : formatSet) {
             try {
-                Fileformat ff = cl.newInstance();
+                Fileformat ff = cl.getDeclaredConstructor().newInstance();
                 if (ff.isWritable()) {
                     ffs.add(new SelectItem(ff.getDisplayName(), null));
                 }
             } catch (InstantiationException e) {
             } catch (IllegalAccessException e) {
+            } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             }
 
         }
@@ -200,7 +204,6 @@ public class HelperForm implements Serializable {
 
         SelectItem deactivated = new SelectItem("5", Helper.getTranslation("statusDeactivated"));
         ssl.add(deactivated);
-
 
         return ssl;
     }
@@ -295,7 +298,6 @@ public class HelperForm implements Serializable {
         return !Helper.getCurrentUser().getLdapGruppe().isReadonly();
     }
 
-
     public boolean isUseUii() {
         return ConfigurationHelper.getInstance().isUseIntrandaUi();
     }
@@ -305,9 +307,9 @@ public class HelperForm implements Serializable {
     }
 
     public void executeScriptsForStep(int id) {
-        HelperSchritte hs = new HelperSchritte();
-        Step s = StepManager.getStepById(id);
-        hs.executeAllScriptsForStep(s, false);
+        Step step = StepManager.getStepById(id);
+        ScriptThreadWithoutHibernate thread = new ScriptThreadWithoutHibernate(step);
+        thread.startOrPutToQueue();
     }
 
     public void executeHttpCallForStep(int id) {
